# ChinaDNS

./: CMakeLists.txt
src/: chinadns.c  chinadns.h
